--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-skeleton": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
