--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "react-skeleton": "^1.0.2"
+    "react-skeleton": "^1.0.2",
+    "styled-components": "^2.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
