--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-skeleton": "^1.0.2",
+    "react-slick": "^0.16.0",
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
